--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>strangernotes</title>
+    <title>Stranger Notes</title>
     <meta name="description" content="Share notes with strangers" />
     <meta name="author" content="strangernotes" />
 
